--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
         "eslint-plugin-n": "16.2.0",
         "eslint-plugin-node": "11.1.0",
         "eslint-plugin-promise": "6.1.1",
-        "eslint-plugin-unicorn": "49.0.0",
         "eslint-plugin-svelte": "2.34.1",
+        "eslint-plugin-unicorn": "49.0.0",
         "prettier": "3.0.3",
         "prettier-plugin-svelte": "3.0.3"
     },
     "type": "module",
     "dependencies": {
-        "@sveltejs/kit": "1.27.2",
         "@sveltejs/adapter-node": "1.3.1",
-        "vite": "4.5.0",
-        "svelte": "4.2.2",
+        "@sveltejs/kit": "1.27.2",
         "@tailwindcss/typography": "0.5.10",
-        "tailwindcss": "3.3.5",
         "autoprefixer": "10.4.16",
-        "postcss": "8.4.31"
+        "emoji-picker-element": "1.18.4",
+        "postcss": "8.4.31",
+        "svelte": "4.2.2",
+        "tailwindcss": "3.3.5",
+        "vite": "4.5.0"
     }
 }
